Refactor CORS configuration to use origin patterns